[gd_scene load_steps=4 format=3 uid="uid://cfvwg4my1dndr"]

[ext_resource type="Script" path="res://scenes/menus/end_screen.gd" id="1_emcpa"]
[ext_resource type="Theme" uid="uid://cvvg3yf2kj0gs" path="res://assets/menu_assets/PixelSleighTheme.tres" id="1_rom7k"]
[ext_resource type="PackedScene" uid="uid://b3c4n4opxdqmq" path="res://scenes/menus/ground_sign.tscn" id="3_xno15"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rom7k")
script = ExtResource("1_emcpa")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1270.0
offset_bottom = 720.0
color = Color(0.133333, 0.12549, 0.203922, 1)

[node name="GroundSign" parent="." instance=ExtResource("3_xno15")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -259.0
offset_top = -260.0
offset_right = -259.0
offset_bottom = -260.0
grow_vertical = 0
scale = Vector2(2, 2)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -163.0
offset_right = 65.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Restart"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../RestartButton")
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -356.0
offset_top = -178.0
offset_right = 357.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.67451, 0.196078, 0.196078, 1)
theme_override_font_sizes/font_size = 35
text = "You survived until level 10..."
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.67451, 0.196078, 0.196078, 1)
theme_override_font_sizes/font_size = 25
text = "Time: 00:00"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
